--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,10 +17,13 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6
+    - poetry
+    - python >=3.7
   run:
-    - python >=3.6
+    - python >=3.7
     - six
+    - pyscard
+    - cryptography
 
 test:
   imports:
