--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,12 +17,10 @@ build:
 requirements:
   host:
     - pip
-    - poetry
+    - poetry-core
     - python >=3.7
   run:
     - python >=3.7
-    - six
-    - pyscard
     - cryptography
 
 test:
