--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,27 +1,28 @@
 {% set name = "fido2" %}
-{% set version = "1.1.3" %}
+{% set version = "2.0.0" %}
+{% set python_min = "3.10" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 26100f226d12ced621ca6198528ce17edf67b78df4287aee1285fee3cd5aa9fc
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/fido2-{{ version }}.tar.gz
+  sha256: 3061cd05e73b3a0ef6afc3b803d57c826aa2d6a9732d16abd7277361f58e7964
 
 build:
-  number: 1
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  number: 0
 
 requirements:
   host:
-    - pip
-    - poetry-core
     - python {{ python_min }}
+    - poetry-core
+    - pip
   run:
-    - python >={{ python_min }}
-    - cryptography
+    - python >={{ python_min }},<4.0
+    - cryptography >=2.6,!=35,<48
 
 test:
   requires:
@@ -32,8 +33,12 @@ test:
 about:
   home: https://pypi.org/project/fido2/
   summary: Fido2, functionality for communicating with a FIDO device over USB as well as verifying attestation and assertion signatures.
-  license: BSD-2-Clause
-  license_file: COPYING
+  description: FIDO2/WebAuthn library for implementing clients and servers.
+  license: Apache-2.0 AND BSD-2-Clause AND MPL-2.0
+  license_file:
+    - COPYING.MPLv2
+    - COPYING.APLv2
+    - COPYING
 
 extra:
   recipe-maintainers:
